fixed scrollbar and show module info on hover

--- a/app/globals.css
+++ b/app/globals.css
@@ -313,3 +313,17 @@ body {
 .flip-card-back {
   transform: rotateY(180deg);
 }
+.scrollbar {
+  overflow-y: scroll; /* Add the ability to scroll */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
